--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,3 +11,10 @@
   box-sizing: border-box;
   font-family: "Roboto", sans-serif;
 }
+
+.glass {
+  background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px); /* Safari and Chrome */
+  border: 1px solid rgba(15, 15, 15, 0.322);
+}
